# carmind

./: CMakeLists.txt  README.md  build_and_flash.sh  firmware_main.c
app/: MoveSolver.java
app/android/: .project  build.gradle  settings.gradle
app/android/app/: build.gradle
app/android/app/src/androidTest/java/com/example/carmind/: ExampleInstrumentedTest.kt
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/example/carmind/: BleService.kt  CarmindApplication.kt  GeofenceBroadcastReceiver.kt  MainActivity.kt  Utils.kt
app/android/app/src/main/java/com/example/carmind/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
app/android/app/src/main/java/com/example/carmind/ui/home/: HomeFragment.kt  (+2 more)
app/android/app/src/main/res/layout/: fragment_home.xml
app/android/app/src/main/res/navigation/: mobile_navigation.xml
app/android/app/src/main/res/values/: dimens.xml  strings.xml
app/android/app/src/test/java/com/example/carmind/: ExampleUnitTest.kt
app/android/gradle/wrapper/: gradle-wrapper.properties
firmware/: CMakeLists.txt  README.md
firmware/nrf_sdk/: .gitignore  toolchain.cmake
firmware/nrf_sdk/base_makefile/: gpio_makefile.mk  twi_makefile.mk
firmware/src/: firmware_main.c  sdk_config.h
firmware/src/dof/: dof.c  dof.h
nrf_sdk/: CMakeLists.txt  sdk_wrapper.mk  toolchain.cmake
nrf_sdk/base_makefile/: blinky_makefile.mk  template_makefile.mk
nrf_sdk/sdk/examples/peripheral/blinky/pca10040/s132/armgcc/_build/: nrf52832_xxaa.hex  nrf52832_xxaa.map
src/: bno055.c  firmware_main.c  sdk_config.h
(+8 files in other folders)
